# cli-rust-turbo-quant

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
Nemotron-Cascade-30B/: .gitattributes  README.md  chat_template.jinja  config.json  configuration_nemotron_h.py  generation_config.json  model.safetensors.index.json  modeling_nemotron_h.py  tokenizer_config.json
Nemotron-Cascade-30B/assets/solutions/icpcwf2025/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  i.py  j.py  k.py  l.py
Nemotron-Cascade-30B/assets/solutions/imoproofbench/: IMO-ProofBench.jsonl
Nemotron-Cascade-30B/assets/solutions/ioi2025/: festival.cpp  migrations-subtask1.cpp  migrations-subtask2.cpp  obstacles.cpp  souvenirs-subtask1_3.cpp  souvenirs-subtask4.cpp  triples-part1.cpp  triples-part2-subtask1.cpp  triples-part2-subtask2.cpp  triples-part2-subtask3.cpp  triples-part2-subtask4.cpp  triples-part2-subtask5.cpp  triples-part2-subtask6.cpp  worldmap.cpp
src/: config.rs  doctor.rs  inspect.rs  logger.rs  main.rs
src/benchmarking/: mod.rs
src/cli/: mod.rs
src/engine/: mod.rs
src/generation/: gemma_model.rs  gguf_loader.rs  mod.rs  sampler.rs  tokenizer_wrapper.rs
src/kv_cache/: attention.rs  mod.rs  quantized_kv.rs
src/loader/: mod.rs
src/math/: mod.rs  polar_quant.rs  qjl.rs  quantizer.rs  rotate.rs
src/serialization/: mod.rs
src/server/: mod.rs
src/validation/: mod.rs
