[package]
name = "turbo_quant"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI & Args
clap = { version = "4.4", features = ["derive", "env"] }

# Tensor handling (Using newer versions for better trait support)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Utils
indicatif = "0.17"
rayon = "1.8"
memmap2 = "0.9"
half = { version = "2.4", features = ["rand_distr"] }
byteorder = "1.5"
num_cpus = "1.16"
sysinfo = "0.30"
rand = "0.9"
tokenizers = "0.21"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
